force-app/main/default/objects/Drawdown__c/fields/Payment_To_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Payment_To_Reverse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To Reverse</label>
    <referenceTo>Drawdown__c</referenceTo>
    <relationshipLabel>Rejections</relationshipLabel>
    <relationshipName>Rejection_Drawdowns</relationshipName>
    <type>Lookup</type>
</CustomField>