force-app/main/default/objects/Drawdown__c/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <description>The Payout Date pulled down from the Opportunity to work around calculated field length limitations.  Do not update directly here, update on Opportunity instead and let it replicate down.</description>
    <inlineHelpText>Expected or Actual Payout Date of the Drawdown.  Do not update directly here, update on Opportunity instead and let it replicate down to here.</inlineHelpText>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>