force-app/main/default/objects/Drawdown__c/fields/Payout_payment_date_matches_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payout_payment_date_matches_opportunity__c</fullName>
    <formula>Opportunity__r.Payout_Date__c ==  Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout payment date matches opportunity</label>
    <type>Checkbox</type>
</CustomField>