force-app/main/default/objects/Drawdown__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <formula>IF(
ISPICKVAL(Payment_Method__c, &#39;Payment&#39;), 0, 
IF(Sum_of_Repayments__c&gt;Amount__c, 0, Amount__c-Sum_of_Repayments__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>