force-app/main/default/objects/Drawdown__c/fields/Principal_Repaid_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repaid_as_of_To_Date__c</fullName>
    <label>Principal Repaid as of To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>