force-app/main/default/objects/Drawdown__c/fields/Quarter_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_of_Year__c</fullName>
    <formula>&#39;Q&#39;+TEXT(CEILING( MONTH ( Date__c ) / 3 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter of Year</label>
    <type>Text</type>
</CustomField>