force-app/main/default/objects/Drawdown__c/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Notes</label>
    <type>TextArea</type>
</CustomField>