force-app/main/default/objects/Drawdown__c/fields/Rejections_Count__c.field-meta.xml
<CustomField>
    <fullName>Rejections_Count__c</fullName>
    <label>Rejections Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>