force-app/main/default/objects/Drawdown__c/fields/Replicated_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Replicated_Payout_Date__c</fullName>
    <label>Replicated Payout Date</label>
    <type>Date</type>
</CustomField>