force-app/main/default/objects/Drawdown__c/fields/Reporting_Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Days_Outstanding__c</fullName>
    <formula>(Reporting_To_Date__c - Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days Outstanding  at the end of the reporting period.    On ELFI 2 just shortened to &quot;Days Outstanding&quot;</inlineHelpText>
    <label>Reporting Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>