force-app/main/default/objects/Drawdown__c/fields/Reporting_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_From_Date__c</fullName>
    <inlineHelpText>Start date of reporting information</inlineHelpText>
    <label>Reporting From Date</label>
    <type>Date</type>
</CustomField>