force-app/main/default/objects/Drawdown__c/fields/Reporting_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To_Date__c</fullName>
    <inlineHelpText>End date of reporting information</inlineHelpText>
    <label>Reporting To Date</label>
    <type>Date</type>
</CustomField>