force-app/main/default/objects/Drawdown__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>static value of 1 used for generating row counts in reports.</inlineHelpText>
    <label>Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>