force-app/main/default/objects/Drawdown__c/fields/Service_Provider_Allowed_Balance__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Allowed_Balance__c</fullName>
    <formula>Opportunity_Service_Provider__r.Allowance_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Allowed Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>