force-app/main/default/objects/Drawdown__c/fields/Sum_of_Payment_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Payment_Allocations__c</fullName>
    <inlineHelpText>Only applies to Payments. Sum of payment allocations which allocate the funds on this payment.</inlineHelpText>
    <label>Sum of Payment Allocations</label>
    <summarizedField>Drawdown_Payment_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Drawdown_Payment_Allocation__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>