force-app/main/default/objects/Drawdown__c/fields/Sum_of_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Repayments__c</fullName>
    <inlineHelpText>Sum of payments applied to this Drawdown</inlineHelpText>
    <label>Sum of Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>