force-app/main/default/objects/Drawdown__c/fields/Sum_of_Repayments_b4_Temp_Date__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Repayments_b4_Temp_Date__c</fullName>
    <inlineHelpText>Date of last repayment applied to this Drawdown before the Temp date.  This field is a roll up summary (DLRS) from Payment Allocations and should not be updated directly.</inlineHelpText>
    <label>Sum of Repayments b4 Temp Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>