force-app/main/default/objects/Drawdown__c/fields/Surplus__c.field-meta.xml
<CustomField>
    <fullName>Surplus__c</fullName>
    <label>Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>