force-app/main/default/objects/Drawdown__c/fields/Temp_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_Payout_Date__c</fullName>
    <inlineHelpText>Used to calculate outstanding balance and date as of a scratch date.  This field should not be updated directly on the Drawdown, instead update from Opportunity and let it replicate down.  Used for Payment Allocation and Reporting From/To amount calc.</inlineHelpText>
    <label>Temp Payout Date</label>
    <type>Date</type>
</CustomField>