force-app/main/default/objects/Drawdown__c/fields/Total_Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Accrued_Interest__c</fullName>
    <formula>Accrued_Interest_as_of_Payout_Date__c  +   NULLVALUE( Admin_Accrued_Interest__c , 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>