force-app/main/default/objects/Drawdown__c/fields/Total_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Balance__c</fullName>
    <formula>Outstanding_Balance_as_of_Payout_Date__c  +  NULLVALUE( Admin_Outstanding_Balance__c , 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>