force-app/main/default/objects/Drawdown__c/fields/Total_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Total_Per_Diem__c</fullName>
    <formula>Per_Diem_as_of_Payout_Date__c  + NULLVALUE(  Admin_Per_Diem__c , 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>