force-app/main/default/objects/Drawdown__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lump-Sum Admin Fee</fullName>
            </value>
            <value>
                <fullName>Lump-Sum Amount Paid to Borrower</fullName>
            </value>
            <value>
                <fullName>Facility Drawdown</fullName>
                <default>true</default>
                <label>Facility Drawdown</label>
            </value>
            <value>
                <fullName>Treatment Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>