force-app/main/default/objects/Drawdown__c/validationRules/Payment_Rejected_Needs_to_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Rejected_Needs_to_be_Negative</fullName>
    <active>false</active>
    <description>Payment Rejected needs a negative amount, please fix and try again.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Reference_Notes__c, &#39;Payment Rejected&#39;),
Amount__c &gt; 0
)</errorConditionFormula>
    <errorMessage>Payment Rejected needs a negative amount, please fix and try again.</errorMessage>
</ValidationRule>